--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -108,7 +108,7 @@ jobs:
             cp "target/${{ matrix.target }}/release/$BIN_NAME" "dist/"
           fi
 
-      - uses: actions/upload-artifact@v2.2.4
+      - uses: actions/upload-artifact@main
         with:
           name: bins-${{ matrix.build }}
           path: dist
