feat: upgrade to 25.5.0.0

--- a/chatrans/Cargo.toml
+++ b/chatrans/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "chatrans"
-version = "0.1.5"
-authors = ["Yusux <syusux@gmail.com>"]
+version = "0.1.6"
+authors = ["Rorin <syusux@gmail.com>"]
 edition = "2021"
 publish = false
 
