--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -21,3 +21,6 @@ rust-embed = "8.3.0"
 bitreader = "0.3.8"
 modular-bitfield = "0.11.2"
 tracing = "0.1.40"
+crypto = "0.5.1"
+blowfish = "0.9.1"
+cipher = "0.4.4"
